bugs/ z-index fix for nav & burger

--- a/css/style.scss
+++ b/css/style.scss
@@ -471,7 +471,7 @@ svg path {
    margin-top: 10px;
    margin-left: 10px;
    position: absolute;
-   z-index: 100;
+   z-index: 5;
    font-weight: 700;
    font-size: 2em;
 }
@@ -815,6 +815,7 @@ svg path {
       background: #000000e6;
       transform: translateX(-100%);
       max-width: 100vw;
+      z-index: 10;
 
       &__list {
          flex-direction: column;
@@ -838,7 +839,7 @@ svg path {
 
    .burger {
       display: flex;
-      z-index: 5;
+      z-index: 15;
       justify-content: center;
       align-items: center;
       position: relative;
